--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mascotitas_app
+name: the_dog_project
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -27,14 +27,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  image_picker: ^0.6.7+14
-  image: ^2.1.4
-  flutter_image_compress: ^0.7.0
-  tflite_flutter: ^0.5.0
-  tflite_flutter_helper: ^0.1.2
-  flutter_launcher_icons: ^0.8.0
-  change_app_package_name: ^0.1.2
+  cupertino_icons:
+  image_picker:
+  image:
+  flutter_image_compress:
+  tflite_flutter:
+  tflite_flutter_helper:
+  flutter_launcher_icons:
+  change_app_package_name:
+  url_launcher: 
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/images/
+  fonts:
+    - family: BebasNeue
+      fonts:
+        - asset: assets/fonts/BebasNeue-Regular.ttf
+ 
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
