--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons:
-  image_picker:
+  google_sign_in:
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.5
+  firebase_storage: ^11.0.10
+  cloud_firestore:
+  google_nav_bar:
+  provider:
+  cached_network_image:
+  modal_bottom_sheet:
+  image_picker: ^0.8.6+1 
   image:
   flutter_image_compress:
   tflite_flutter:
