User App Ready to GO

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_launcher_icons:
   change_app_package_name:
   url_launcher: 
+  geolocator:
+  geocoding:
 
 dev_dependencies:
   flutter_test:
