--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   image_picker: ^0.8.6+1 
   image:
   flutter_image_compress:
+  # tflite: ^1.1.2
+  flutter_tflite: ^1.0.1
   tflite_flutter:
   tflite_flutter_helper:
   flutter_launcher_icons:
